aws-infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpdesk
  labels:
    name: helpdesk
    environment: production
